cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/jniLibs/${ANDROID_ABI})

#ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/main/cpp/giflib)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/main/cpp/webp)
ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src/main/cpp/framesequence)